# new_camera_node

./: CMakeLists.txt  package.xml
include/: basler.cpp  basler.h  circle_find.cpp  circle_find.h  img_tf.h  refactoring.cpp  refactoring.h
src/: basler_camera.cpp  hole_find.cpp  main_backup.cpp
srv/: cam_Srv.srv
yolo_label/: 0.xml  1.xml  10.xml  100.xml  101.xml  102.xml  103.xml  104.xml  105.xml  106.xml  107.xml  108.xml  109.xml  11.xml  112.xml  113.xml  114.xml  115.xml  116.xml  117.xml  118.xml  119.xml  12.xml  120.xml  121.xml  122.xml  123.xml  124.xml  125.xml  126.xml  127.xml  128.xml  129.xml  13.xml  130.xml  131.xml  132.xml  133.xml  134.xml  135.xml  (+312 more)
